[gd_scene load_steps=3 format=3 uid="uid://ccqybcgx31ach"]

[ext_resource type="Script" path="res://Scenes/shop_card_holder.gd" id="1_ghbie"]
[ext_resource type="PackedScene" uid="uid://co7kucn2sklks" path="res://Scenes/shop_card.tscn" id="2_s5amk"]

[node name="ShopCardHolder" type="Node2D"]
script = ExtResource("1_ghbie")

[node name="ShopCard" parent="." instance=ExtResource("2_s5amk")]

[node name="CardName" type="Label" parent="."]
offset_left = 58.0
offset_top = -71.0
offset_right = 163.0
offset_bottom = -48.0
text = "Invalid_Name"

[connection signal="activate_adding_unit" from="ShopCard" to="." method="_on_shop_card_activate_adding_unit"]
